# deep-blue

./: README.txt  analyze.sh  build.sh
src/: CMakeLists.txt  a.out  analyze.sh  calculator.c  compile.sh  header.h  main.c  test.c  valgrind-out.txt
src/lib/: CMakeLists.txt  board.c  board.h  input.c  input.h  piece.c  piece.h
src/tests/: test2.exp  test2.in  test3.exp  test3.in
